# bg3_mod_git_manager

./: Cargo.toml  README.md
src/: main.rs
src/link_manager/: mod.rs
template/: .gitattributes  .gitignore
