[package]
name = "bg3_mod_git_manager"
version = "0.1.0"
edition = "2021"
description = "Let you manage your mod project with git"

[dependencies]
symlink = "0.1.0"
fs_extra = "1.3.0"
directories = "5.0.1"
rfd = "0.15.0"
iced = {version="0.13.1", features = ["advanced"]}
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"